Adaptive pure pursuit no beef